# rust_chat_server

./: .gitignore
db-demo/: Cargo.toml  Rocket.toml
db-demo/src/: main.rs
diesel_demo/: .env  Cargo.toml  test_db.db
diesel_demo/migrations/2023-11-03-172129_create_posts/: down.sql  up.sql
diesel_demo/src/: lib.rs  models.rs  schema.rs
hello/src/: main.rs
mdelga49-final/: .env  Cargo.toml  Rocket.toml  my-app.db
mdelga49-final/db/: my-app.db
mdelga49-final/migrations/2023-11-04-002520_create_posts/: up.sql
mdelga49-final/migrations/2023-11-04-005606_create_posts/: down.sql  up.sql
mdelga49-final/migrations/2023-11-06-181708_create_posts/: down.sql  up.sql
mdelga49-final/migrations/2023-11-10-220427_create_tables/: down.sql  up.sql
mdelga49-final/migrations/2023-11-11-230336_create_tables/: up.sql
mdelga49-final/migrations/2023-11-14-203009_create_tables/: down.sql  up.sql
mdelga49-final/migrations/2023-11-15-052325_create_tables/: down.sql  up.sql
mdelga49-final/src/: db.rs  diesel_sqlite.rs  handler.rs  main.rs  message.rs  post.rs  schema.rs  tests.rs
mdelga49-final/src/login/: credentials.rs  mod.rs  response.rs  test.rs  user.rs
mdelga49-final/src/message_handler/: message.rs  mod.rs  post.rs  room.rs  tests.rs
mdelga49-final/static/: auth.js  create_user.js  index.html  login.js  reset.css  script.js  style.css
worksheets/: Cargo.toml
