[package]
name = "db-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.1.3"
diesel_migrations = "2.1.0"
rocket = "0.4.10"
rocket_db_pools = "0.1.0-rc.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_sqlite_pool"]
