[package]
name = "mdelga49-final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
diesel = { version ="2.1.3", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
rocket_codegen = "0.4.11"
rocket_contrib = "0.4.11"
rocket_http = "0.4.11"
rusqlite = {version = "0.29.0", features = ["chrono"]}
tokio = "1.33.0"
unix-ts = "0.6.0"

[dependencies.rocket]
version = "0.5.0-rc.4"
features =  ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.4"
features = ["diesel_sqlite_pool", "sqlite_pool"]

[features]
testing = []
